--- a/ubuntu/Vagrantfile
+++ b/ubuntu/Vagrantfile
@@ -66,6 +66,6 @@ Vagrant.configure(2) do |config|
   # documentation for more information about their specific syntax and use.
    config.vm.provision "shell", inline: <<-SHELL
      sudo apt-get update
-     sudo apt-get install -y git gcc dpkg-dev lintian gnupg dh-make autotools-dev pbuilder
+     sudo apt-get install -y git gcc dpkg-dev lintian gnupg dh-make autotools-dev pbuilder quilt
    SHELL
 end
