some user faced issues at compilation, while most don't. Add those packages that fixed the issue

--- a/ubuntu/Vagrantfile
+++ b/ubuntu/Vagrantfile
@@ -66,6 +66,7 @@ Vagrant.configure(2) do |config|
   # documentation for more information about their specific syntax and use.
    config.vm.provision "shell", inline: <<-SHELL
      sudo apt-get update
-     sudo apt-get install -y git gcc dpkg-dev lintian gnupg dh-make autotools-dev pbuilder quilt
+     sudo apt-get install -y git gcc dpkg-dev lintian gnupg dh-make
+autotools-dev pbuilder quilt byacc flex
    SHELL
 end
